--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="welcome">
             <h1>Welcome to our School</h1>
             <p>Hey there! Welcome to Unity College of Nursing Science! We are thrilled to have you as part of our community and excited for the journey that lies ahead. Our goal is to provide you with the knowledge, skills, and experience necessary to become a successful nurse. From the moment you step onto our campus, you will feel a sense of camaraderie among your fellow students and faculty members who are eager to assist you in achieving your dreams. We take pride in offering a dynamic curriculum that emphasizes hands-on learning opportunities in real-world settings including hospitals, clinics, and other healthcare facilities. At Unity College of Nursing Science, we do not simply prepare nurses; we create leaders who possess empathy, intelligence, and critical thinking skills necessary for success in today’s healthcare landscape. Let’s get started!</p>
-            <button>Apply Now</button>
+            <a href="admission.html"><button>Apply Now</button></a>
         </div>
     </div>
 
@@ -111,21 +111,21 @@
         <div class="feat">
             <div class="feat-one">
                 <div class="feat-inner">
-                    <i class="fas fa-bars"></i>
+                    <i class="fa-solid fa-user-nurse"></i>
                  <h1>Nursing Program</h1>
                  <p>We have top-tier faculty members who have extensive experience in the field and are dedicated to helping students succeed.</p>
                 </div>
             </div>
             <div class="feat-one">
                 <div class="feat-inner">
-                    <i class="fas fa-bars"></i>
+                    <i class="fa-solid fa-user-doctor"></i>
                  <h1>Midwifery Program</h1>
                  <p>The school support students with all the resources necessary for them to become an expert midwife ready for success after graduation.</p>
                 </div>
             </div>
             <div class="feat-one">
                 <div class="feat-inner">
-                    <i class="fas fa-bars"></i>
+                    <i class="fa-solid fa-book-open"></i>
                  <h1>Books & Library</h1>
                  <p>Our Library is well equipped with the latest materials as well as Libarians who are always willing to help, and the Library has a comfortable atmosphere.</p>
                 </div>
